examples/failing/04-invalid-number.hogo
; This fails because the number is invalid on "forward".
forward 5.